Adjust `.protocol` padding to avoid border doubling. On initial page load (without a hash parameter), the previous padding of the page content cause the top border of the first topic to double up with the bottom border of the navigation bar.
This commit removes 1px from the page padding to overlap the two and make them appear as a single 1px border.

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -55,7 +55,7 @@ span.branding .branding-docs {
   position: fixed; }
 
 .protocol {
-  padding-top: 49px; }
+  padding-top: 48px; }
 
 a.jump-anchor {
   position: relative;
