--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -9,7 +9,7 @@
 }
 
 .protocol {
-  padding-top: $nav-height;
+  padding-top: $nav-height - 1px;
 }
 
 a.jump-anchor {
